# Front_line_worker_project

./: README.md  final.py  frontend.html  index.html  main.py  pyproject.toml  readme.md  style.css
backend/: .env  .gitignore  hello.py  main.py  pyproject.toml
